--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "phantomjs": "~1.9.18",
     "karma-phantomjs-launcher": "~0.2.1",
     "karma": "~0.13.15",
-    "karma-coffee-preprocessor": "~0.3.0"
+    "karma-coffee-preprocessor": "~0.3.0",
   },
   "engines": {
     "node": ">=0.10.0"
@@ -48,6 +48,7 @@
     "coffee-script": "~1.10.0",
     "gzippo": "~0.2.0",
     "express": "~4.13.3",
-    "bcrypt": "~0.8.5"
+    "bcrypt": "~0.8.5",
+    "morgan": "~1.6.1"
   }
 }
