--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-ui-router": "~0.2.15",
-    "Justified-Gallery": "~3.6.0"
+    "Justified-Gallery": "~3.6.0",
+    "angular-ui-router-anim-in-out": "~1.0.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
